# GravityProject

./: Notes.txt  README.md
MathematicsLib/: MathVec.cpp  MathVec.h
src/: CMakeLists.txt  NBodyConfig.h.in  main.cpp
src/MathematicsLib/: CMakeLists.txt  MathVec.cpp  MathVec.h  Vector.cpp  Vector.h
